# oss-impact-dashboard-dev

./: .env.example  .gitignore  GOATCOUNTER_ACTIVATION_CHECKLIST.md  IMPLEMENTATION_CHECKLIST.md  LICENSE  README.md  deployment-marker.json  impact.html  index.html  metrics-history-dev.json  metrics-history.json  operations.html  package-lock.json  package.json  pyproject.toml  report-status.json  report.html  rtd-goatcounter.js  settings.html  vite.config.js
agents/: ui-ux.md
assets/: app-BBP2hu56.js  app-BEuIdbEG.css  app-BiE918Jk.css  app-C-99FVJC.js  app-C_ORs9CO.js  app-CeLRozqe.js  app-ClzNtst9.js  app-DLjcF5qj.js  app-Ddfb9YxI.js  app-JzuY9ham.js
data/: dashboard.json  projects.json
docs/: ARCHITECTURE.md  GETTING_STARTED.md  PR_PREVIEW_VERIFICATION.md  dashboard-growth-refactor-plan.md  research-report.md  technical-plan.md
manual/: case-studies.yml  funding.yml  project-data.yml
projects/: dev.yml  example.yml  mole-local.yml  mole.yml
scripts/: base-path.mjs  build.sh  ci-check.sh  collect-rtd-analytics.mjs  collect-rtd.sh  completion.bash  deployment-marker.mjs  dev-local.sh  generate-rtd-goatcounter.mjs  install-hooks.sh  local-preview.sh  post-deploy-smoke.mjs  pre-commit.sh  pre-push.sh  preview-pages.mjs  publish-report-pdf.mjs  publish-rtd-cache.sh  restore-report-pdf.mjs  restore-rtd-cache.sh  validate-workflows.sh  wait-for-deployment.mjs  wait-for-url.mjs
temp/: dashboard-content-reduction-audit (1).md  dashboard-content-reduction-audit.md  plan.md
tests/: conftest.py  test_build_index.py  test_community_standards.py  test_credentials.py  (+18 more)
(+200 files in other folders)
